--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -31,7 +31,8 @@
     "viewDetails": "查看详情",
     "tip": "提示",
     "confirm": "确认",
-    "cancel": "取消"
+    "cancel": "取消",
+    "back": "返回"
   },
   "footer": {
     "brandInfo1": "ATB 中国由MI平台 (台湾)",
@@ -147,7 +148,98 @@
     "levelRight": "等级特权",
     "pullMoney": "推广赚钱",
     "loginRegister": "登录/注册",
-    "passwordTooShort": "密码长度不能少于6位"
+    "passwordTooShort": "密码长度不能少于6位",
+    "setAsDefault": "设为默认账户",
+    "confirmSetDefault": "确定要将此账户设为默认账户吗？",
+    "alreadyDefault": "该账户已经是默认账户",
+    "currentDefault": "当前默认",
+    "setDefault": "设为默认",
+    "accountHolder": "持卡人",
+    "huiwangAccount": "汇旺账号",
+    "usdtWallet": "USDT钱包",
+    "networkType": "网络类型",
+    "walletAddress": "钱包地址",
+    "openingBank": "开户银行",
+    "bankBranch": "开户网点",
+    "accountName": "开户人姓名",
+    "accountNumber": "账号",
+    "phoneNumber": "手机号码",
+    "idNumber": "身份证号",
+    "addAccount": "添加账户",
+    "editAccount": "编辑账户",
+    "updateAccount": "更新账户",
+    "huiwang": "汇旺",
+    "usdt": "USDT",
+    "noAccount": "暂无收款账户",
+    "addAccountTip": "请添加银行卡、汇旺或USDT账户",
+    "inputBankName": "请输入开户银行名称",
+    "inputAccountName": "请输入开户人姓名",
+    "inputAccountNumber": "请输入银行账号",
+    "inputBankBranch": "请输入开户网点",
+    "inputIdNumber": "请输入身份证号(可选)",
+    "inputPhoneNumber": "请输入手机号码(可选)",
+    "inputHuiwangPhone": "请输入手机号码",
+    "inputWalletAddress": "请输入USDT钱包地址",
+    "selectNetworkType": "请选择网络类型",
+    "accountNameReadonly": "仅可修改一次",
+    "defaultBadge": "默认",
+    "accountType": "账户类型",
+    "accountInfo": "账户信息",
+    "accountDetails": "账户详情",
+    "createdDate": "添加时间",
+    "lastModified": "最后修改",
+    "maintenance": "维护中",
+    "normal": "正常",
+    "addSuccess": "添加成功",
+    "addFailed": "添加失败",
+    "updateSuccess": "修改成功",
+    "updateFailed": "修改失败",
+    "deleteSuccess": "删除成功",
+    "deleteFailed": "删除失败",
+    "deleteConfirm": "确定要删除此账户吗？",
+    "deleteWarning": "删除后无法恢复",
+    "loadFailed": "获取账户列表失败",
+    "tryAgain": "请重试",
+    "required": "必填",
+    "optional": "可选",
+    "fillBankName": "请填写开户银行名称",
+    "fillAccountName": "请填写开户人姓名",
+    "fillAccountNumber": "请填写银行账号",
+    "fillBankBranch": "请填写开户网点",
+    "fillHuiwangAccount": "请填写汇旺账号",
+    "fillPhoneNumber": "请填写手机号码",
+    "fillWalletAddress": "请填写钱包地址",
+    "selectNetwork": "请选择网络类型",
+    "invalidFormat": "格式不正确",
+    "invalidBankCard": "银行卡号格式不正确",
+    "invalidPhone": "手机号码格式不正确",
+    "invalidIdNumber": "身份证号格式不正确",
+    "invalidWalletAddress": "钱包地址格式不正确",
+    "duplicateAccount": "该账户已存在",
+    "maxAccountLimit": "已达到最大账户数量限制",
+    "cannotDeleteDefault": "不能删除默认账户",
+    "switchDefaultFirst": "请先切换默认账户",
+    "confirmSwitchDefault": "确定切换默认账户吗？",
+    "switchSuccess": "切换成功",
+    "switchFailed": "切换失败",
+    "copySuccess": "复制成功",
+    "copyFailed": "复制失败",
+    "clickToCopy": "点击复制",
+    "masked": "已脱敏",
+    "showFull": "显示完整",
+    "hideFull": "隐藏",
+    "accountSecurity": "账户安全",
+    "securityTip": "为了您的账户安全，部分信息已脱敏显示",
+    "verifyIdentity": "验证身份",
+    "verifyBeforeEdit": "修改前需要验证身份",
+    "sendVerifyCode": "发送验证码",
+    "inputVerifyCode": "请输入验证码",
+    "verifySuccess": "验证成功",
+    "verifyFailed": "验证失败",
+    "resendCode": "重新发送",
+    "codeExpired": "验证码已过期",
+    "tooManyAttempts": "尝试次数过多，请稍后再试",
+    "contactSupport": "如有问题请联系客服"
   },
   "loading": "正在加载中...",
   "submit": "提交",
@@ -345,9 +437,6 @@
   "transferAmountTip1": "转账金额将从您的余额中扣除",
   "transferAmountTip2": "转账后立即到账，无法撤回",
   "transferAmountTip3": "请仔细核对会员信息和金额",
-  "setAsDefault": "设为默认账户",
-  "confirmSetDefault": "确定要将此账户设为默认账户吗？",
-  "alreadyDefault": "该账户已经是默认账户",
   "settingSuccess": "设置成功",
   "settingFailed": "设置失败",
   "nickname": "昵称",
@@ -378,7 +467,6 @@
   "tryAgainLater": "请稍后重试",
   "dataLoadFailed": "数据加载失败",
   "parameterError": "参数错误",
-  "confirmLogout": "确认退出登录？",
   "applyTime": "申请时间",
   "completeTime": "完成时间",
   "rechargeDetail": "充值详情",
