--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -474,5 +474,33 @@
   "bankAccountName": "银行户名",
   "bankCardNumber": "银行卡号",
   "unknownStatus": "未知状态",
-  "getRechargeRecordFailed": "获取充值记录失败"
+  "getRechargeRecordFailed": "获取充值记录失败",
+  "agentRecord": "代理记录",
+  "noAgentRecord": "暂无代理记录", 
+  "adjustProportion": "调整比例",
+  "addCredits": "上分",
+  "memberAddCredits": "会员上分",
+  "adjustCommissionRate": "调整返佣比例",
+  "currentRate": "当前比例",
+  "yourRate": "您的比例",
+  "newRate": "新比例",
+  "enterDecimal": "请输入小数，如：0.05",
+  "confirmTransfer": "确认转账",
+  "yourBalance": "您的余额",
+  "transferAmount": "转账金额",
+  "enterTransferAmount": "请输入转账金额",
+  "transferAmountTip1": "转账金额将从您的余额中扣除",
+  "transferAmountTip2": "转账后立即到账，无法撤回", 
+  "transferAmountTip3": "请仔细核对会员信息和金额",
+  "rateMustBeBetween": "比例必须在0到{max}之间",
+  "enterValidAmount": "请输入有效的转账金额",
+  "amountExceedsBalance": "转账金额不能超过您的余额 {balance}",
+  "transferSuccess": "转账成功",
+  "transferFailed": "转账失败",
+  "modifySuccess": "修改成功",
+  "modifyFailed": "修改失败",
+  "enterCommissionRate": "请输入返佣比例",
+  "agent": "代理",
+  "member": "会员",
+  "balance": "余额"
 }
