--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -59,13 +59,9 @@
     "browserAccess": "手机浏览器也能直接访问",
     "comprehensiveChoice": "包容万象 从容选择"
   },
-  "noData": "无数据",
-  "all": "全部",
-  "activity_detail": "活动详情",
   "mine": {
     "safeSetting": "安全设置",
     "aboutUs": "关于我们",
-    "logout": "退出登录",
     "loginPwd": "登录密码",
     "withdrawPwd": "提现密码",
     "deposit": "存款",
@@ -129,9 +125,7 @@
     "totalBalance": "账户余额",
     "inputTransferMoney": "请输入转账金额",
     "money2": "金额",
-    "myCollection": "我的收藏",
     "myNotices": "我的消息",
-    "balance": "余额",
     "centerWalletBalance": "中心钱包余额",
     "toGame": "进入游戏",
     "loveIsHere": "你爱的都在这里",
@@ -241,11 +235,6 @@
     "tooManyAttempts": "尝试次数过多，请稍后再试",
     "contactSupport": "如有问题请联系客服"
   },
-  "loading": "正在加载中...",
-  "submit": "提交",
-  "inputNewPwdAgain": "请再次填写新密码",
-  "success": "操作成功",
-  "noMore": "没有更多了",
   "moneyLog": {
     "detail": "记录详情",
     "tradeMoney": "交易金额",
@@ -257,28 +246,6 @@
     "tradeDate": "交易时间",
     "status": "游戏状态"
   },
-  "fillIn": "填写",
-  "changeAuto": "切换至自动",
-  "changeManual": "切换至手动",
-  "confirm": "确认",
-  "dianzi": "电子游戏",
-  "zhenren": "真人游戏",
-  "tiyu": "体育游戏",
-  "lottery": "彩票游戏",
-  "qipai": "棋牌游戏",
-  "fishGame": "捕鱼游戏",
-  "noRecord": "暂无数据",
-  "unread": "未读",
-  "readed": "已读",
-  "transferIn": "转入",
-  "inputTransferInAmount": "请输入转入金额",
-  "todayDoNotShow": "今日不再显示",
-  "enterGame": "进入游戏",
-  "transferInMoneyMustThan0": "转入金额必须大于0",
-  "refreshBalanceFailed": "刷新余额失败",
-  "depositFailed": "转换额度失败",
-  "moneyTransferMoneyNot": "钱包之间不能互相转换",
-  "daliySign": "每日签到",
   "support": {
     "welcome": "欢迎来到客服中心",
     "mainCustom": "主线客服",
@@ -295,7 +262,6 @@
     "openLinkFailed": "打开{{name}}失败",
     "configLoadFailed": "配置加载失败，请重试"
   },
-  "selected": "请选择",
   "login": {
     "openFixed": "开启极致体验",
     "inputAccount": "请输入账号",
@@ -303,7 +269,6 @@
     "inputPwd": "请输入密码",
     "login": "登录",
     "forgetPwd": "忘记密码？",
-    "register": "注册",
     "resetpwdForCustomer": "请联系客服重置密码",
     "loginSuccess": "登录成功",
     "loginTitle": "用户登录",
@@ -315,7 +280,6 @@
     "enterCaptcha": "请输入验证码",
     "clickRefresh": "点击刷新",
     "rememberMe": "记住我",
-    "forgotPassword": "忘记密码？",
     "loggingIn": "登录中...",
     "loginFailed": "登录失败",
     "loginError": "登录异常，请稍后重试",
@@ -342,6 +306,89 @@
     "verificationRequired": "需要进行身份验证",
     "loginSuccessWelcome": "登录成功，欢迎回来！"
   },
+  "register": {
+    "inputUsername": "请填写用户名",
+    "inputPassword": "请填写密码",
+    "confirmPassword": "确认密码",
+    "inputConfirmPassword": "请再次填写密码",
+    "realName": "真实姓名",
+    "inputRealname": "请填写真实姓名",
+    "inputQkpwd": "请填写取款密码",
+    "phone": "电话号码",
+    "inputPhone": "请填写电话号码",
+    "currency": "货币种类",
+    "inputCurrency": "请选择货币种类",
+    "inputCaptcha": "请填写验证码",
+    "inviteCode": "邀请码",
+    "inputInviterCode": "请填写邀请码",
+    "email": "电子邮箱"
+  },
+  "vip": {
+    "dqCK": "当前存款",
+    "dqBet": "当前投注",
+    "amount": "晋升礼金",
+    "zhuanXiang": "专享",
+    "dayLJ": "每日礼金",
+    "weekLJ": "每周礼金",
+    "monthLJ": "每月礼金",
+    "brithdayLJ": "生日礼金",
+    "rightDetail": "VIP特权详情"
+  },
+  "deposit": {
+    "detail1": "1.上面所列银行为'在线支付'所支持的银行，选择您的支付银行。",
+    "detail2": "2.在 '存款金额' 栏目中填写您要支付的金额， 并点击'提交'按钮。",
+    "detail3": "3.存款成功后，需达到一倍有效投注额方可提款（防套现、防洗钱）。"
+  },
+  "extension": {
+    "myInviteCode": "我的邀请码",
+    "loading": "LOADING...",
+    "copyInviteCode": "复制邀请码",
+    "promotionLink": "推广链接",
+    "copyLink": "复制链接",
+    "sharePromotionLink": "分享推广链接",
+    "inviteCodeNotExist": "邀请码不存在",
+    "inviteCodeCopied": "邀请码已复制",
+    "promotionLinkGenerating": "推广链接生成中...",
+    "promotionLinkCopied": "推广链接已复制",
+    "inviteToRegister": "邀请注册",
+    "comeToRegister": "快来注册吧！",
+    "getUserInfoFailed": "获取用户信息失败"
+  },
+  "game_log": {
+    "not_cpmpelete": "未结算",
+    "cancel": "已取消",
+    "complete": "已完成"
+  },
+  "noData": "无数据",
+  "all": "全部",
+  "activity_detail": "活动详情",
+  "loading": "正在加载中...",
+  "submit": "提交",
+  "inputNewPwdAgain": "请再次填写新密码",
+  "success": "操作成功",
+  "noMore": "没有更多了",
+  "fillIn": "填写",
+  "changeAuto": "切换至自动",
+  "changeManual": "切换至手动",
+  "dianzi": "电子游戏",
+  "zhenren": "真人游戏",
+  "tiyu": "体育游戏",
+  "lottery": "彩票游戏",
+  "qipai": "棋牌游戏",
+  "fishGame": "捕鱼游戏",
+  "noRecord": "暂无数据",
+  "unread": "未读",
+  "readed": "已读",
+  "transferIn": "转入",
+  "inputTransferInAmount": "请输入转入金额",
+  "todayDoNotShow": "今日不再显示",
+  "enterGame": "进入游戏",
+  "transferInMoneyMustThan0": "转入金额必须大于0",
+  "refreshBalanceFailed": "刷新余额失败",
+  "depositFailed": "转换额度失败",
+  "moneyTransferMoneyNot": "钱包之间不能互相转换",
+  "daliySign": "每日签到",
+  "selected": "请选择",
   "rememberMe": "记住密码",
   "weiHuZhong": "平台游戏维护中...",
   "pay_type": "支付方式",
@@ -362,60 +409,16 @@
   "open_bank": "开户行",
   "input_recharge_amount": "请输入转账账户",
   "rechate_address": "充值地址",
-  "transfer_address": "充值地址",
   "input_transfer_addr": "请输入充值地址",
   "transfer_out_address": "转出地址",
   "input_transfer_out_addr": "请输入转出钱包地址",
-  "game_log": {
-    "not_cpmpelete": "未结算",
-    "cancel": "已取消",
-    "complete": "已完成"
-  },
-  "register": {
-    "username": "用户名",
-    "inputUsername": "请填写用户名",
-    "password": "密码",
-    "inputPassword": "请填写密码",
-    "confirmPassword": "确认密码",
-    "inputConfirmPassword": "请再次填写密码",
-    "realName": "真实姓名",
-    "inputRealname": "请填写真实姓名",
-    "qkPwd": "取款密码",
-    "inputQkpwd": "请填写取款密码",
-    "phone": "电话号码",
-    "inputPhone": "请填写电话号码",
-    "currency": "货币种类",
-    "inputCurrency": "请选择货币种类",
-    "captcha": "验证码",
-    "inputCaptcha": "请填写验证码",
-    "inviteCode": "邀请码",
-    "inputInviterCode": "请填写邀请码",
-    "email": "电子邮箱"
-  },
-  "vip": {
-    "dqCK": "当前存款",
-    "dqBet": "当前投注",
-    "amount": "晋升礼金",
-    "zhuanXiang": "专享",
-    "dayLJ": "每日礼金",
-    "weekLJ": "每周礼金",
-    "monthLJ": "每月礼金",
-    "brithdayLJ": "生日礼金",
-    "rightDetail": "VIP特权详情"
-  },
   "add": "新增",
   "sweetWarning": "温馨提示",
-  "deposit": {
-    "detail1": "1.上面所列银行为'在线支付'所支持的银行，选择您的支付银行。",
-    "detail2": "2.在 '存款金额' 栏目中填写您要支付的金额， 并点击'提交'按钮。",
-    "detail3": "3.存款成功后，需达到一倍有效投注额方可提款（防套现、防洗钱）。"
-  },
   "youhuihuodong": "优惠活动",
   "systemAnnouncement": "系统公告",
   "customerService": "客服地址",
   "financeAddress": "财务地址",
   "clickToOpen": "点击打开",
-  "hotline": "热线电话",
   "rechargeRecord": "充值记录",
   "rechargeAmount": "充值金额",
   "transferBankName": "转账银行名称",
@@ -424,7 +427,6 @@
   "inputHuiwangAccount": "请输入汇旺账号",
   "inputUSDTAddress": "请输入USDT钱包地址",
   "rechargeSubmitSuccess": "充值申请提交成功",
-  "warmTips": "温馨提示",
   "rebateRecord": "返水记录",
   "commissionRecord": "返佣记录",
   "subordinateMembers": "下级会员",
@@ -451,7 +453,6 @@
   "edit": "编辑",
   "delete": "删除",
   "save": "保存",
-  "cancel": "取消",
   "refresh": "刷新",
   "search": "搜索",
   "operationFailed": "操作失败",
@@ -475,23 +476,15 @@
   "bankCardNumber": "银行卡号",
   "unknownStatus": "未知状态",
   "getRechargeRecordFailed": "获取充值记录失败",
-  "agentRecord": "代理记录",
-  "noAgentRecord": "暂无代理记录", 
-  "adjustProportion": "调整比例",
-  "addCredits": "上分",
-  "memberAddCredits": "会员上分",
+  "noAgentRecord": "暂无代理记录",
   "adjustCommissionRate": "调整返佣比例",
   "currentRate": "当前比例",
   "yourRate": "您的比例",
   "newRate": "新比例",
   "enterDecimal": "请输入小数，如：0.05",
-  "confirmTransfer": "确认转账",
   "yourBalance": "您的余额",
   "transferAmount": "转账金额",
   "enterTransferAmount": "请输入转账金额",
-  "transferAmountTip1": "转账金额将从您的余额中扣除",
-  "transferAmountTip2": "转账后立即到账，无法撤回", 
-  "transferAmountTip3": "请仔细核对会员信息和金额",
   "rateMustBeBetween": "比例必须在0到{max}之间",
   "enterValidAmount": "请输入有效的转账金额",
   "amountExceedsBalance": "转账金额不能超过您的余额 {balance}",
