--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -495,5 +495,7 @@
   "enterCommissionRate": "请输入返佣比例",
   "agent": "代理",
   "member": "会员",
-  "balance": "余额"
+  "balance": "余额",
+  "noRebateRecord": "暂无返水记录",
+  "getRebateRecordFailed": "获取返水记录失败"
 }
