--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -359,6 +359,25 @@
     "cancel": "已取消",
     "complete": "已完成"
   },
+  "currency": {
+    "cny": "人民币 (CNY)",
+    "usd": "美元 (USD)",
+    "eur": "欧元 (EUR)",
+    "jpy": "日元 (JPY)",
+    "krw": "韩元 (KRW)",
+    "thb": "泰铢 (THB)",
+    "vnd": "越南盾 (VND)",
+    "sgd": "新加坡元 (SGD)",
+    "myr": "马来西亚令吉 (MYR)",
+    "php": "菲律宾比索 (PHP)",
+    "idr": "印尼盾 (IDR)",
+    "btc": "比特币 (BTC)",
+    "eth": "以太坊 (ETH)",
+    "usdt": "泰达币 (USDT)"
+  },
+  "rebateAmount": "返水金额",
+  "commissionAmount": "返佣金额", 
+  "currencyType": "货币类型",
   "noData": "无数据",
   "all": "全部",
   "activity_detail": "活动详情",
