--- a/src/lang/zh-TW.json
+++ b/src/lang/zh-TW.json
@@ -12,27 +12,37 @@
   },
   "user": {
     "register": "註冊",
-    "settings": "設置",
-    "conactUs": "聯繫我們"
+    "settings": "設定",
+    "conactUs": "聯絡我們",
+    "balance": "餘額",
+    "profile": "個人中心",
+    "wallet": "我的錢包",
+    "history": "歷史記錄",
+    "logout": "退出登錄"
   },
   "game": {
     "myCollection": "我的收藏",
     "start": "開始",
-    "venues": "場館"
+    "venues": "場館",
+    "loginRequired": "請先登錄才能開始遊戲"
   },
   "common": {
     "viewMore": "查看更多",
-    "viewDetails": "查看詳情"
+    "viewDetails": "查看詳情",
+    "tip": "提示",
+    "confirm": "確認",
+    "cancel": "取消",
+    "back": "返回"
   },
   "footer": {
     "brandInfo1": "ATB 中國由MI平台 (台灣)",
-    "brandInfo2": "包網團隊提供平台技術支持",
-    "mga": "馬耳他牌照（MGA）認證",
+    "brandInfo2": "包網團隊提供平台技術支援",
+    "mga": "馬爾他牌照（MGA）認證",
     "bvi": "英屬維爾京群島（BVI）認證",
     "gc": "英國GC監督委員會",
     "pagcor": "菲律賓（PAGCOR）監督牌照",
     "consultNow": "立即諮詢",
-    "disclaimer": "ATB 中國擁有歐洲馬耳他MGA、英國GC監督委員會（GamblingCommission）和菲律賓政府（PAGCOR）頒發的合法執照。註冊於英屬維爾京群島，是受國際行業協會認可的合法公司。進行註冊並娛樂前，請確保您年滿18周歲！",
+    "disclaimer": "ATB 中國擁有歐洲馬爾他MGA、英國GC監督委員會（GamblingCommission）和菲律賓政府（PAGCOR）頒發的合法執照。註冊於英屬維爾京群島，是受國際行業協會認可的合法公司。進行註冊並娛樂前，請確保您年滿18週歲！",
     "copyright": "版權所有 ©2019-2023 ATB 中國 保留所有權"
   },
   "home": {
@@ -45,17 +55,13 @@
     "safeBetting": "安全暢快 實時投注",
     "enjoyExperience": "縱想指尖暢快體驗",
     "appDescription": "全球首家一體化娛樂原生APP，盡顯流暢、完美操作。海量體育、捕魚遊戲，真人娛樂、彩票投注及電子遊藝等，最新最全娛樂項目盡在掌中體驗掃碼下載，即刻擁有！",
-    "scanTip": "(提示：用手機自帶瀏覽器掃碼或者使用手機自帶的照相機掃描二維碼下載）",
+    "scanTip": "（提示：用手機自帶瀏覽器掃碼或者使用手機自帶的照相機掃描二維碼下載）",
     "browserAccess": "手機瀏覽器也能直接訪問",
     "comprehensiveChoice": "包容萬象 從容選擇"
   },
-  "noData": "無數據",
-  "all": "全部",
-  "activity_detail": "活動詳情",
   "mine": {
-    "safeSetting": "安全設置",
+    "safeSetting": "安全設定",
     "aboutUs": "關於我們",
-    "logout": "退出登錄",
     "loginPwd": "登錄密碼",
     "withdrawPwd": "提現密碼",
     "deposit": "存款",
@@ -67,7 +73,7 @@
     "edit": "修改",
     "addBind": "增加綁定",
     "modifyLoginPwd": "修改登入密碼",
-    "settingWithdrawalPwd": "設置取款密碼",
+    "settingWithdrawalPwd": "設定取款密碼",
     "modifyWithdrawalPwd": "修改取款密碼",
     "currPwd": "當前密碼",
     "inputCurrPwd": "請填寫舊密碼",
@@ -89,7 +95,7 @@
     "drawMoney": "提款金額",
     "drawingPwd": "提款密碼",
     "allMoney": "全部",
-    "notSetDrawingPwd": "您還未設置取款密碼，請先設置取款密碼再操作",
+    "notSetDrawingPwd": "您還未設定取款密碼，請先設定取款密碼再操作",
     "bindDrawingAddress": "請先綁定銀行卡",
     "vipDetial": "晉級規則",
     "vipLiJin": "晉級禮金",
@@ -104,7 +110,7 @@
     "month": "一月內",
     "all": "全部",
     "money_rebate": "返水錢包",
-    "money_fanyong": "返傭錢包",
+    "money_fanyong": "返佣錢包",
     "money": "中心錢包",
     "moneyLogAmount": "流水金額",
     "validAmount": "有效金額",
@@ -114,14 +120,12 @@
     "apiType": "接口類型",
     "gameType": "遊戲類型",
     "tuiguanG": "推廣賺錢",
-    "baseInfo": "基本信息",
+    "baseInfo": "基本資訊",
     "transferAmount": "額度轉換",
     "totalBalance": "賬戶餘額",
     "inputTransferMoney": "請輸入轉賬金額",
     "money2": "金額",
-    "myCollection": "我的收藏",
-    "myNotices": "我的消息",
-    "balance": "餘額",
+    "myNotices": "我的訊息",
     "centerWalletBalance": "中心錢包餘額",
     "toGame": "進入遊戲",
     "loveIsHere": "你愛的都在這裡",
@@ -129,7 +133,7 @@
     "yuEBao": "餘額寶",
     "bankCard": "銀行卡",
     "accountSafe": "賬戶與安全",
-    "safest": "完善賬戶信息，更安全",
+    "safest": "完善賬戶資訊，更安全",
     "persionalInfo": "個人資料",
     "normalFunc": "常用功能",
     "centerWallet": "中心錢包",
@@ -138,13 +142,99 @@
     "levelRight": "等級特權",
     "pullMoney": "推廣賺錢",
     "loginRegister": "登錄/註冊",
-    "passwordTooShort": "密碼長度不能少於6位"
+    "passwordTooShort": "密碼長度不能少於6位",
+    "setAsDefault": "設為預設賬戶",
+    "confirmSetDefault": "確定要將此賬戶設為預設賬戶嗎？",
+    "alreadyDefault": "該賬戶已經是預設賬戶",
+    "currentDefault": "當前預設",
+    "setDefault": "設為預設",
+    "accountHolder": "持卡人",
+    "huiwangAccount": "匯旺賬號",
+    "usdtWallet": "USDT錢包",
+    "networkType": "網路類型",
+    "walletAddress": "錢包地址",
+    "openingBank": "開戶銀行",
+    "bankBranch": "開戶網點",
+    "accountName": "開戶人姓名",
+    "accountNumber": "賬號",
+    "phoneNumber": "手機號碼",
+    "idNumber": "身份證號",
+    "addAccount": "添加賬戶",
+    "editAccount": "編輯賬戶",
+    "updateAccount": "更新賬戶",
+    "huiwang": "匯旺",
+    "usdt": "USDT",
+    "noAccount": "暫無收款賬戶",
+    "addAccountTip": "請添加銀行卡、匯旺或USDT賬戶",
+    "inputBankName": "請輸入開戶銀行名稱",
+    "inputAccountName": "請輸入開戶人姓名",
+    "inputAccountNumber": "請輸入銀行賬號",
+    "inputBankBranch": "請輸入開戶網點",
+    "inputIdNumber": "請輸入身份證號(可選)",
+    "inputPhoneNumber": "請輸入手機號碼(可選)",
+    "inputHuiwangPhone": "請輸入手機號碼",
+    "inputWalletAddress": "請輸入USDT錢包地址",
+    "selectNetworkType": "請選擇網路類型",
+    "accountNameReadonly": "僅可修改一次",
+    "defaultBadge": "預設",
+    "accountType": "賬戶類型",
+    "accountInfo": "賬戶資訊",
+    "accountDetails": "賬戶詳情",
+    "createdDate": "添加時間",
+    "lastModified": "最後修改",
+    "maintenance": "維護中",
+    "normal": "正常",
+    "addSuccess": "添加成功",
+    "addFailed": "添加失敗",
+    "updateSuccess": "修改成功",
+    "updateFailed": "修改失敗",
+    "deleteSuccess": "刪除成功",
+    "deleteFailed": "刪除失敗",
+    "deleteConfirm": "確定要刪除此賬戶嗎？",
+    "deleteWarning": "刪除後無法恢復",
+    "loadFailed": "獲取賬戶列表失敗",
+    "tryAgain": "請重試",
+    "required": "必填",
+    "optional": "可選",
+    "fillBankName": "請填寫開戶銀行名稱",
+    "fillAccountName": "請填寫開戶人姓名",
+    "fillAccountNumber": "請填寫銀行賬號",
+    "fillBankBranch": "請填寫開戶網點",
+    "fillHuiwangAccount": "請填寫匯旺賬號",
+    "fillPhoneNumber": "請填寫手機號碼",
+    "fillWalletAddress": "請填寫錢包地址",
+    "selectNetwork": "請選擇網路類型",
+    "invalidFormat": "格式不正確",
+    "invalidBankCard": "銀行卡號格式不正確",
+    "invalidPhone": "手機號碼格式不正確",
+    "invalidIdNumber": "身份證號格式不正確",
+    "invalidWalletAddress": "錢包地址格式不正確",
+    "duplicateAccount": "該賬戶已存在",
+    "maxAccountLimit": "已達到最大賬戶數量限制",
+    "cannotDeleteDefault": "不能刪除預設賬戶",
+    "switchDefaultFirst": "請先切換預設賬戶",
+    "confirmSwitchDefault": "確定切換預設賬戶嗎？",
+    "switchSuccess": "切換成功",
+    "switchFailed": "切換失敗",
+    "copySuccess": "複製成功",
+    "copyFailed": "複製失敗",
+    "clickToCopy": "點擊複製",
+    "masked": "已脫敏",
+    "showFull": "顯示完整",
+    "hideFull": "隱藏",
+    "accountSecurity": "賬戶安全",
+    "securityTip": "為了您的賬戶安全，部分資訊已脫敏顯示",
+    "verifyIdentity": "驗證身份",
+    "verifyBeforeEdit": "修改前需要驗證身份",
+    "sendVerifyCode": "發送驗證碼",
+    "inputVerifyCode": "請輸入驗證碼",
+    "verifySuccess": "驗證成功",
+    "verifyFailed": "驗證失敗",
+    "resendCode": "重新發送",
+    "codeExpired": "驗證碼已過期",
+    "tooManyAttempts": "嘗試次數過多，請稍後再試",
+    "contactSupport": "如有問題請聯絡客服"
   },
-  "loading": "正在加載中...",
-  "submit": "提交",
-  "inputNewPwdAgain": "請再次填寫新密碼",
-  "success": "操作成功",
-  "noMore": "沒有更多了",
   "moneyLog": {
     "detail": "記錄詳情",
     "tradeMoney": "交易金額",
@@ -156,10 +246,149 @@
     "tradeDate": "交易時間",
     "status": "遊戲狀態"
   },
+  "support": {
+    "welcome": "歡迎來到客服中心",
+    "mainCustom": "主線客服",
+    "agentCoustom": "客戶服務代表",
+    "serviceTop": "小時專線服務 貼心至上",
+    "onlineService": "線上客服",
+    "vipService": "VIP客服",
+    "agentCooperation": "代理合作",
+    "complaints": "投訴建議",
+    "telegram": "Telegram",
+    "whatsapp": "WhatsApp",
+    "noServiceConfig": "暫無服務配置",
+    "linkNotConfigured": "{{name}}連結未配置",
+    "openLinkFailed": "打開{{name}}失敗",
+    "configLoadFailed": "配置加載失敗，請重試"
+  },
+  "login": {
+    "openFixed": "開啟極致體驗",
+    "inputAccount": "請輸入賬號",
+    "inputRight": "請輸入正確內容",
+    "inputPwd": "請輸入密碼",
+    "login": "登錄",
+    "forgetPwd": "忘記密碼？",
+    "resetpwdForCustomer": "請聯絡客服重置密碼",
+    "loginSuccess": "登錄成功",
+    "loginTitle": "用戶登錄",
+    "username": "用戶名",
+    "enterUsername": "請輸入用戶名",
+    "password": "密碼",
+    "enterPassword": "請輸入密碼",
+    "captcha": "驗證碼",
+    "enterCaptcha": "請輸入驗證碼",
+    "clickRefresh": "點擊刷新",
+    "rememberMe": "記住我",
+    "loggingIn": "登錄中...",
+    "loginFailed": "登錄失敗",
+    "loginError": "登錄異常，請稍後重試",
+    "noAccount": "還沒有賬號？",
+    "registerNow": "立即註冊",
+    "confirmLogout": "確定要退出登錄嗎？",
+    "logoutSuccess": "退出成功",
+    "usernameRequired": "請輸入用戶名",
+    "usernameLength": "用戶名長度為3-20個字符",
+    "passwordRequired": "請輸入密碼",
+    "passwordLength": "密碼長度為6-20個字符",
+    "captchaRequired": "請輸入驗證碼",
+    "captchaLength": "驗證碼長度為4位",
+    "accountLocked": "賬號已被鎖定，請聯絡客服",
+    "accountNotExist": "賬號不存在",
+    "passwordError": "密碼錯誤",
+    "captchaError": "驗證碼錯誤",
+    "loginTimeout": "登錄超時，請重新登錄",
+    "sessionExpired": "會話已過期，請重新登錄",
+    "loginRestricted": "登錄受限，請稍後再試",
+    "tooManyAttempts": "登錄嘗試次數過多，請稍後再試",
+    "accountDisabled": "賬號已被禁用",
+    "loginFromNewDevice": "檢測到新設備登錄",
+    "verificationRequired": "需要進行身份驗證",
+    "loginSuccessWelcome": "登錄成功，歡迎回來！"
+  },
+  "register": {
+    "inputUsername": "請填寫用戶名",
+    "inputPassword": "請填寫密碼",
+    "confirmPassword": "確認密碼",
+    "inputConfirmPassword": "請再次填寫密碼",
+    "realName": "真實姓名",
+    "inputRealname": "請填寫真實姓名",
+    "inputQkpwd": "請填寫取款密碼",
+    "phone": "電話號碼",
+    "inputPhone": "請填寫電話號碼",
+    "currency": "貨幣種類",
+    "inputCurrency": "請選擇貨幣種類",
+    "inputCaptcha": "請填寫驗證碼",
+    "inviteCode": "邀請碼",
+    "inputInviterCode": "請填寫邀請碼",
+    "email": "電子郵箱"
+  },
+  "vip": {
+    "dqCK": "當前存款",
+    "dqBet": "當前投注",
+    "amount": "晉升禮金",
+    "zhuanXiang": "專享",
+    "dayLJ": "每日禮金",
+    "weekLJ": "每週禮金",
+    "monthLJ": "每月禮金",
+    "brithdayLJ": "生日禮金",
+    "rightDetail": "VIP特權詳情"
+  },
+  "deposit": {
+    "detail1": "1.上面所列銀行為'線上支付'所支援的銀行，選擇您的支付銀行。",
+    "detail2": "2.在 '存款金額' 欄目中填寫您要支付的金額， 並點擊'提交'按鈕。",
+    "detail3": "3.存款成功後，需達到一倍有效投注額方可提款（防套現、防洗錢）。"
+  },
+  "extension": {
+    "myInviteCode": "我的邀請碼",
+    "loading": "LOADING...",
+    "copyInviteCode": "複製邀請碼",
+    "promotionLink": "推廣連結",
+    "copyLink": "複製連結",
+    "sharePromotionLink": "分享推廣連結",
+    "inviteCodeNotExist": "邀請碼不存在",
+    "inviteCodeCopied": "邀請碼已複製",
+    "promotionLinkGenerating": "推廣連結生成中...",
+    "promotionLinkCopied": "推廣連結已複製",
+    "inviteToRegister": "邀請註冊",
+    "comeToRegister": "快來註冊吧！",
+    "getUserInfoFailed": "獲取用戶資訊失敗"
+  },
+  "game_log": {
+    "not_cpmpelete": "未結算",
+    "cancel": "已取消",
+    "complete": "已完成"
+  },
+  "currency": {
+    "cny": "人民幣 (CNY)",
+    "usd": "美元 (USD)",
+    "eur": "歐元 (EUR)",
+    "jpy": "日元 (JPY)",
+    "krw": "韓元 (KRW)",
+    "thb": "泰銖 (THB)",
+    "vnd": "越南盾 (VND)",
+    "sgd": "新加坡元 (SGD)",
+    "myr": "馬來西亞令吉 (MYR)",
+    "php": "菲律賓比索 (PHP)",
+    "idr": "印尼盾 (IDR)",
+    "btc": "比特幣 (BTC)",
+    "eth": "以太坊 (ETH)",
+    "usdt": "泰達幣 (USDT)"
+  },
+  "rebateAmount": "返水金額",
+  "commissionAmount": "返佣金額",
+  "currencyType": "貨幣類型",
+  "noData": "無數據",
+  "all": "全部",
+  "activity_detail": "活動詳情",
+  "loading": "正在加載中...",
+  "submit": "提交",
+  "inputNewPwdAgain": "請再次填寫新密碼",
+  "success": "操作成功",
+  "noMore": "沒有更多了",
   "fillIn": "填寫",
   "changeAuto": "切換至自動",
   "changeManual": "切換至手動",
-  "confirm": "確認",
   "dianzi": "電子遊戲",
   "zhenren": "真人遊戲",
   "tiyu": "體育遊戲",
@@ -178,38 +407,11 @@
   "depositFailed": "轉換額度失敗",
   "moneyTransferMoneyNot": "錢包之間不能互相轉換",
   "daliySign": "每日簽到",
-  "support": {
-    "welcome": "歡迎來到客服中心",
-    "mainCustom": "主線客服",
-    "agentCoustom": "客戶服務代表",
-    "serviceTop": "小時專線服務 貼心至上",
-    "onlineService": "在線客服",
-    "vipService": "VIP客服",
-    "agentCooperation": "代理合作",
-    "complaints": "投訴建議",
-    "telegram": "Telegram",
-    "whatsapp": "WhatsApp",
-    "noServiceConfig": "暫無服務配置",
-    "linkNotConfigured": "{{name}}鏈接未配置",
-    "openLinkFailed": "打開{{name}}失敗",
-    "configLoadFailed": "配置加載失敗，請重試"
-  },
   "selected": "請選擇",
-  "login": {
-    "openFixed": "開啟極致體驗",
-    "inputAccount": "請輸入賬號",
-    "inputRight": "請輸入正確內容",
-    "inputPwd": "請輸入密碼",
-    "login": "登錄",
-    "forgetPwd": "忘記密碼？",
-    "register": "註冊",
-    "resetpwdForCustomer": "請聯繫客服重置密碼",
-    "loginSuccess": "登錄成功"
-  },
   "rememberMe": "記住密碼",
   "weiHuZhong": "平台遊戲維護中...",
   "pay_type": "支付方式",
-  "online_pay": "在線支付",
+  "online_pay": "線上支付",
   "company_pay": "公司入款",
   "pay_channel": "支付渠道",
   "recharge_qrcode": "收款二維碼",
@@ -226,60 +428,16 @@
   "open_bank": "開戶行",
   "input_recharge_amount": "請輸入轉賬賬戶",
   "rechate_address": "充值地址",
-  "transfer_address": "充值地址",
   "input_transfer_addr": "請輸入充值地址",
   "transfer_out_address": "轉出地址",
   "input_transfer_out_addr": "請輸入轉出錢包地址",
-  "game_log": {
-    "not_cpmpelete": "未結算",
-    "cancel": "已取消",
-    "complete": "已完成"
-  },
-  "register": {
-    "username": "用戶名",
-    "inputUsername": "請填寫用戶名",
-    "password": "密碼",
-    "inputPassword": "請填寫密碼",
-    "confirmPassword": "確認密碼",
-    "inputConfirmPassword": "請再次填寫密碼",
-    "realName": "真實姓名",
-    "inputRealname": "請填寫真實姓名",
-    "qkPwd": "取款密碼",
-    "inputQkpwd": "請填寫取款密碼",
-    "phone": "電話號碼",
-    "inputPhone": "請填寫電話號碼",
-    "currency": "貨幣種類",
-    "inputCurrency": "請選擇貨幣種類",
-    "captcha": "驗證碼",
-    "inputCaptcha": "請填寫驗證碼",
-    "inviteCode": "邀請碼",
-    "inputInviterCode": "請填寫邀請碼",
-    "email": "電子郵箱"
-  },
-  "vip": {
-    "dqCK": "當前存款",
-    "dqBet": "當前投注",
-    "amount": "晉升禮金",
-    "zhuanXiang": "專享",
-    "dayLJ": "每日禮金",
-    "weekLJ": "每週禮金",
-    "monthLJ": "每月禮金",
-    "brithdayLJ": "生日禮金",
-    "rightDetail": "VIP特權詳情"
-  },
   "add": "新增",
   "sweetWarning": "溫馨提示",
-  "deposit": {
-    "detail1": "1.上面所列銀行為'在線支付'所支持的銀行，選擇您的支付銀行。",
-    "detail2": "2.在 '存款金額' 欄目中填寫您要支付的金額， 並點擊'提交'按鈕。",
-    "detail3": "3.存款成功後，需達到一倍有效投注額方可提款（防套現、防洗錢）。"
-  },
   "youhuihuodong": "優惠活動",
   "systemAnnouncement": "系統公告",
   "customerService": "客服地址",
   "financeAddress": "財務地址",
   "clickToOpen": "點擊打開",
-  "hotline": "熱線電話",
   "rechargeRecord": "充值記錄",
   "rechargeAmount": "充值金額",
   "transferBankName": "轉賬銀行名稱",
@@ -288,11 +446,10 @@
   "inputHuiwangAccount": "請輸入匯旺賬號",
   "inputUSDTAddress": "請輸入USDT錢包地址",
   "rechargeSubmitSuccess": "充值申請提交成功",
-  "warmTips": "溫馨提示",
   "rebateRecord": "返水記錄",
-  "commissionRecord": "返傭記錄",
+  "commissionRecord": "返佣記錄",
   "subordinateMembers": "下級會員",
-  "teamInfo": "團隊信息",
+  "teamInfo": "團隊資訊",
   "agentRecord": "代理記錄",
   "adjustProportion": "調整比例",
   "addCredits": "上分",
@@ -300,12 +457,9 @@
   "confirmTransfer": "確認轉賬",
   "transferAmountTip1": "轉賬金額將從您的餘額中扣除",
   "transferAmountTip2": "轉賬後立即到賬，無法撤回",
-  "transferAmountTip3": "請仔細核對會員信息和金額",
-  "setAsDefault": "設為默認賬戶",
-  "confirmSetDefault": "確定要將此賬戶設為默認賬戶嗎？",
-  "alreadyDefault": "該賬戶已經是默認賬戶",
-  "settingSuccess": "設置成功",
-  "settingFailed": "設置失敗",
+  "transferAmountTip3": "請仔細核對會員資訊和金額",
+  "settingSuccess": "設定成功",
+  "settingFailed": "設定失敗",
   "nickname": "暱稱",
   "inputNickname": "請輸入暱稱",
   "hotGames": "熱門遊戲",
@@ -318,9 +472,8 @@
   "edit": "編輯",
   "delete": "刪除",
   "save": "保存",
-  "cancel": "取消",
   "refresh": "刷新",
-  "search": "搜索",
+  "search": "搜尋",
   "operationFailed": "操作失敗",
   "pleaseInput": "請輸入",
   "pleaseSelect": "請選擇",
@@ -330,11 +483,10 @@
   "rejected": "已拒絕",
   "processing": "處理中",
   "completed": "已完成",
-  "networkError": "網絡請求失敗",
+  "networkError": "網路請求失敗",
   "tryAgainLater": "請稍後重試",
   "dataLoadFailed": "數據加載失敗",
   "parameterError": "參數錯誤",
-  "confirmLogout": "確認退出登錄？",
   "applyTime": "申請時間",
   "completeTime": "完成時間",
   "rechargeDetail": "充值詳情",
@@ -342,5 +494,44 @@
   "bankAccountName": "銀行戶名",
   "bankCardNumber": "銀行卡號",
   "unknownStatus": "未知狀態",
-  "getRechargeRecordFailed": "獲取充值記錄失敗"
+  "getRechargeRecordFailed": "獲取充值記錄失敗",
+  "noAgentRecord": "暫無代理記錄",
+  "adjustCommissionRate": "調整返佣比例",
+  "currentRate": "當前比例",
+  "yourRate": "您的比例",
+  "newRate": "新比例",
+  "enterDecimal": "請輸入小數，如：0.05",
+  "yourBalance": "您的餘額",
+  "transferAmount": "轉賬金額",
+  "enterTransferAmount": "請輸入轉賬金額",
+  "rateMustBeBetween": "比例必須在0到{max}之間",
+  "enterValidAmount": "請輸入有效的轉賬金額",
+  "amountExceedsBalance": "轉賬金額不能超過您的餘額 {balance}",
+  "transferSuccess": "轉賬成功",
+  "transferFailed": "轉賬失敗",
+  "modifySuccess": "修改成功",
+  "modifyFailed": "修改失敗",
+  "enterCommissionRate": "請輸入返佣比例",
+  "agent": "代理",
+  "member": "會員",
+  "balance": "餘額",
+  "noRebateRecord": "暫無返水記錄",
+  "getRebateRecordFailed": "獲取返水記錄失敗",
+  "noCommissionRecord": "暫無返佣記錄",
+  "getCommissionRecordFailed": "獲取返佣記錄失敗",
+  "timeUnknown": "時間未知",
+  "noGameRecord": "暫無遊戲記錄",
+  "getGameRecordFailed": "獲取遊戲記錄失敗",
+  "noMoneyRecord": "暫無交易記錄",
+  "getMoneyRecordFailed": "獲取交易記錄失敗",
+  "withdrawRecord": "提現記錄",
+  "withdrawDetail": "提現詳情",
+  "withdrawAmount": "提現金額",
+  "withdrawMethod": "提現方式",
+  "actualAmount": "實際到賬",
+  "handlingFee": "手續費",
+  "bankName": "銀行名稱",
+  "receivingAccount": "收款賬戶",
+  "remark": "備註",
+  "getWithdrawRecordFailed": "獲取提現記錄失敗"
 }
