--- a/src/lang/zh-CN.json
+++ b/src/lang/zh-CN.json
@@ -24,7 +24,30 @@
     "myCollection": "我的收藏",
     "start": "开始",
     "venues": "场馆",
-    "loginRequired": "请先登录才能开始游戏"
+    "loginRequired": "请先登录才能开始游戏",
+    "hot": "热门",
+    "recent": "最近",
+    "favorite": "收藏",
+    "hotGames": "热门游戏",
+    "recentGames": "最近游戏",
+    "favoriteGames": "收藏游戏",
+    "loginToViewRecent": "请先登录查看最近游戏",
+    "loginToViewFavorite": "请先登录查看收藏游戏",
+    "noHotGames": "暂无热门游戏",
+    "noRecentGames": "暂无最近游戏",
+    "noFavoriteGames": "暂无收藏游戏",
+    "getHotGamesFailed": "获取热门游戏失败",
+    "getRecentGamesFailed": "获取最近游戏失败",
+    "getFavoriteGamesFailed": "获取收藏游戏失败",
+    "loginNow": "立即登录",
+    "addToFavorite": "添加收藏",
+    "favorited": "已收藏",
+    "addedToFavorite": "已添加到收藏",
+    "removedFromFavorite": "已取消收藏",
+    "favoriteSuccess": "收藏成功",
+    "unfavoriteSuccess": "取消收藏成功",
+    "favoriteError": "收藏操作失败",
+    "autoAddedToRecent": "已自动添加到最近游戏"
   },
   "common": {
     "viewMore": "查看更多",
